# ansikten

./: .gitignore  .luarc.json  AGENTS.md  CHANGELOG.md  CLAUDE.md  README.md  RENAME_MANUAL_FACES_PLAN.md  ROADMAP.md  TODO.md  plan-rename-bugfix.md  theme-examples.html
backend/: .gitignore  analysera_ansikten.py  ansikten-backend.spec  bildvisare-backend.spec  cli_config.py  cli_image.py  cli_matching.py  face_backends.py  faceid_db.py  filer2mappar.py  forfina_ansikten.py  hantera_ansikten.py  hitta_ansikten.py  migrera_processed.py  pyproject.toml  rakna_spelare.py  ratta_ansikten.py  rename_nef.py  rensa_dlib.py  requirements.txt  run_server.py  update_encodings_with_filehash.py
backend/api/: server.py
backend/api/routes/: culling.py  database.py  detection.py  files.py  imports.py  management.py  player_count.py  preprocessing.py  refinement.py  rename_nef.py  startup.py  statistics.py  status.py
backend/api/services/: culling_service.py  detection_service.py  file_resolver.py  import_service.py  management_service.py  player_count_service.py  preprocessing_cache.py  refinement_service.py  rename_nef_service.py  rename_service.py  startup_service.py  statistics_service.py
backend/api/websocket/: progress.py
backend/tests/: test_api_health.py  test_culling_dropdown.py  test_culling_rename.py  test_culling_retention.py  test_dedup_encodings.py  test_detection_manual_confirm.py  test_distinct_pairs.py  test_duplicate_people.py  test_player_count_exclusions.py  test_rakna_exclusions.py  test_rename_service.py  test_twin_disambiguation.py
frontend/: .gitignore  (+9 more)
(+171 files in other folders)
