[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[project]
name = "ansikten-backend"
version = "1.0.0"
description = "Face recognition backend for event photography"
requires-python = ">=3.11"
dependencies = [
    "face_recognition",
    "numpy",
    "pillow",
    "opencv-python",
    "rawpy",
    "prompt_toolkit",
    "rich",
    "pyxdg",
    "matplotlib",
    # InsightFace backend
    "insightface>=0.7",
    "onnxruntime>=1.15",
    # FastAPI server
    "fastapi>=0.100.0",
    "uvicorn[standard]>=0.23.0",
    "websockets>=11.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "httpx>=0.27",
]
build = [
    "pyinstaller>=6.0",
]

[tool.setuptools]
py-modules = []

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
pythonpath = ["."]
